--- a/Turkish/main/Calendar.apk/res/values-tr/arrays.xml
+++ b/Turkish/main/Calendar.apk/res/values-tr/arrays.xml
@@ -1,5 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="aquarius_info">
+        <item>aquarius</item>
+        <item>Kova</item>
+        <item>1/20 - 2/18</item>
+    </string-array>
+    <string-array name="aries_info">
+        <item>aries</item>
+        <item>Koç</item>
+        <item>3/21 - 4/19</item>
+    </string-array>
+    <string-array name="bundesliga">
+        <item>2</item>
+        <item>Bundesliga</item>
+    </string-array>
+    <string-array name="cancer_info">
+        <item>cancer</item>
+        <item>Yengeç</item>
+        <item>6/22 - 7/22</item>
+    </string-array>
+    <string-array name="capricorn_info">
+        <item>capricorn</item>
+        <item>Oğlak</item>
+        <item>12/22 - 1/19</item>
+    </string-array>
+    <string-array name="change_response_labels">
+        <item>Sadece bu etkinlikte</item>
+        <item>Tüm etkinlikler esnasında</item>
+    </string-array>
+    <string-array name="default_reminder_labels">
+        <item>Etkinkli esnasında</item>
+        <item>5 dakika önce</item>
+        <item>10 dakika önce</item>
+        <item>15 mdakika önce</item>
+        <item>30 dakika önce</item>
+        <item>1 saat önce</item>
+        <item>1 gün önce</item>
+        <item>2 gün önce</item>
+        <item>1 hafta önce</item>
+    </string-array>
+    <string-array name="english_premium_league">
+        <item>4</item>
+        <item>@string/english_premium_league</item>
+    </string-array>
+    <string-array name="gemini_info">
+        <item>gemini</item>
+        <item>İkizler</item>
+        <item>5/21 - 6/21</item>
+    </string-array>
+    <string-array name="la_liga">
+        <item>3</item>
+        <item>La Liga</item>
+    </string-array>
+    <string-array name="leo_info">
+        <item>leo</item>
+        <item>Aslan</item>
+        <item>7/23 - 8/22</item>
+    </string-array>
+    <string-array name="libra_info">
+        <item>libra</item>
+        <item>Terazi</item>
+        <item>9/23 - 10/23</item>
+    </string-array>
+    <string-array name="ligue_1">
+        <item>5</item>
+        <item>Lig 1</item>
+    </string-array>
+    <string-array name="pisces_info">
+        <item>pisces</item>
+        <item>Balık</item>
+        <item>2/19 - 3/20</item>
+    </string-array>
+    <string-array name="preferences_week_start_day_labels">
+        <item>Varsayılan Bölge</item>
+        <item>Cumartesi</item>
+        <item>Pazar</item>
+        <item>Pazartesi</item>
+    </string-array>
+    <string-array name="repeat_choose_day">
+        <item>1.</item>
+        <item>2.</item>
+        <item>3.</item>
+        <item>4.</item>
+        <item>5.</item>
+        <item>6.</item>
+        <item>7.</item>
+        <item>8.</item>
+        <item>9.</item>
+        <item>10.</item>
+        <item>11.</item>
+        <item>12.</item>
+        <item>13.</item>
+        <item>14.</item>
+        <item>15.</item>
+        <item>16.</item>
+        <item>17.</item>
+        <item>18.</item>
+        <item>19.</item>
+        <item>20.</item>
+        <item>21.</item>
+        <item>22.</item>
+        <item>23.</item>
+        <item>24.</item>
+        <item>25.</item>
+        <item>26.</item>
+        <item>27.</item>
+        <item>28.</item>
+        <item>29.</item>
+        <item>30.</item>
+        <item>31.</item>
+    </string-array>
+    <string-array name="repeat_choose_week_left">
+        <item>1.</item>
+        <item>2.</item>
+        <item>3.</item>
+        <item>4.</item>
+        <item>Son</item>
+    </string-array>
+    <string-array name="repeat_countdown">
+        <item>Asla</item>
+        <item>Aylık</item>
+        <item>Yıllık</item>
+    </string-array>
+    <string-array name="repeat_frequency_spinner">
+        <item>gün</item>
+        <item>hafta</item>
+        <item>ay</item>
+        <item>yıl</item>
+    </string-array>
+    <string-array name="response_labels1">
+        <item>Cevap yok</item>
+        <item>Evet</item>
+        <item>Belki</item>
+        <item>Hayır</item>
+    </string-array>
+    <string-array name="sagittarius_info">
+        <item>sagittarius</item>
+        <item>Yay</item>
+        <item>11/23 - 12/21</item>
+    </string-array>
+    <string-array name="scorpio_info">
+        <item>scorpio</item>
+        <item>Akrep</item>
+        <item>10/24 - 11/22</item>
+    </string-array>
+    <string-array name="serie_a">
+        <item>1</item>
+        <item>A Serisi</item>
+    </string-array>
+    <string-array name="taurus_info">
+        <item>taurus</item>
+        <item>Boğa</item>
+        <item>4/20 - 5/20</item>
+    </string-array>
     <string-array name="timezone_labels">
         <item>Marshall Adaları</item>
         <item>Midway Adası</item>
@@ -167,6 +320,11 @@
         <item>5 saat önce</item>
         <item>6 saat önce</item>
         <item>1 gün önce</item>
+    </string-array>
+    <string-array name="virgo_info">
+        <item>virgo</item>
+        <item>Başak</item>
+        <item>8/23 - 9/22</item>
     </string-array>
     <string-array name="repeat_frequency_spinner">
         <item>gün</item>
